--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -86,11 +86,11 @@
     students.Add(s9);
     
     var s10 = new Student("Rick", "Sorkin"); 
-    s10.Title = "Ms."; 
+    s10.Title = "Mr."; 
     s10.Course = "BSIT";
     s10.Section = "31A1";
     s10.Birthday = new DateTime(2004, 6, 9); 
-    s10.SetGender(Gender.Female); 
+    s10.SetGender(Gender.Male); 
     students.Add(s10);
 }
 
